[package]
name = "intel-mkl-src"
version = "0.2.5"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Redistribution of Intel(R) MKL as a crate"
repository = "https://github.com/termoshtt/rust-intel-mkl"
keywords = ["fft", "blas", "lapack"]
license-file = "License.txt"
readme = "README.md"

build = "build.rs"
links = "mkl_intel_lp64"

[build-dependencies]
md5 = "0.6"
curl = "*"
bzip2 = "0.3.3"
tar = "*"

[dev-dependencies]
libc = "0.2"

